# portfolio-optimizer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
data/config/: portfolio_config.json
data/market/: historical_prices.csv
docs/: release_notes_feature_set_1.md  release_notes_feature_set_2_1.md  release_notes_feature_set_2_2.md  release_notes_feature_set_2_3.md  release_notes_feature_set_3.md  release_notes_feature_set_4.md
docs/changelog/: change1.1.0.md  change1.2.0.md  change1.3.0.md  change1.4.0.md  change1.5.0.md  change1.6.0.md
include/analytics/: attribution.hpp  benchmark_analysis.hpp  drawdown_analysis.hpp  performance_metrics.hpp  rolling_statistics.hpp
include/backtest/: backtest_engine.hpp  backtest_result.hpp  portfolio.hpp  rebalance_scheduler.hpp  trade_logger.hpp  transaction_cost_model.hpp
include/data/: data_loader.hpp  market_data.hpp  sector_mapper.hpp
include/optimizer/: efficient_frontier.hpp  mean_variance_optimizer.hpp  optimizer_interface.hpp  osqp_solver.hpp  quadratic_solver.hpp
include/risk/: ewma_covariance.hpp  ledoit_wolf_shrinkage.hpp  risk_model.hpp  risk_model_factory.hpp  sample_covariance.hpp
scripts/: generate_data.sh  generate_synthetic_data.cpp
src/: main.cpp
src/analytics/: attribution.cpp  benchmark_analysis.cpp  drawdown_analysis.cpp  performance_metrics.cpp  rolling_statistics.cpp
src/backtest/: backtest_engine.cpp  portfolio.cpp  rebalance_scheduler.cpp  trade_logger.cpp  transaction_cost_model.cpp
src/data/: data_loader.cpp  market_data.cpp  sector_mapper.cpp
src/optimizer/: efficient_frontier.cpp  mean_variance_optimizer.cpp  optimizer_interface.cpp  osqp_solver.cpp  quadratic_solver.cpp
src/risk/: ewma_covariance.cpp  ledoit_wolf_shrinkage.cpp  risk_model.cpp  risk_model_factory.cpp  sample_covariance.cpp
tests/: test_backtest_engine.cpp  test_data_loader.cpp  test_efficient_frontier.cpp  test_mean_variance_optimizer.cpp  test_osqp_inequality.cpp  test_portfolio.cpp  test_rebalance_scheduler.cpp  test_risk_models.cpp  test_schaible.cpp  test_tracking_error.cpp  test_trade_logger.cpp  test_transaction_costs.cpp  test_turnover_constraints.cpp
